# dummy_msg_publication

./: CMakeLists.txt  package.xml
docker/: Dockerfile  build.sh  get_into_container.sh
launch/: pointcloud2.launch
rviz_config/: pointcloud2.rviz
src/: pointcloud2.cpp
